fix(rate-limit): compile against Bucket4j 8.9.0 - Replace List.getFirst() with get(0) - Build BucketConfiguration and local Bucket by adding each Bandwidth via addLimit - Make adjustForFallback return List<Bandwidth>